<resources>
    <string name="app_name">test_drawar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">福大 太郎</string>
    <string name="nav_header_subtitle">TD000000</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">マップ</string>
    <string name="menu_gallery">緊急要請</string>
    <string name="menu_slideshow">チャット</string>
    <string name="menu_info_nurse">看護師情報</string>
    <string name="menu_info_user">利用者情報</string>
</resources>