<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.test_drawar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.test_drawar.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.test_drawar.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_info_nurse"
        android:name="com.example.test_drawar.ui.info_nurse.InfoNurseFragment"
        android:label="@string/menu_info_nurse"
        tools:layout="@layout/fragment_info_nurse" />

    <fragment
        android:id="@+id/nav_info_user"
        android:name="com.example.test_drawar.ui.info_user.InfoUserFragment"
        android:label="@string/menu_info_user"
        tools:layout="@layout/fragment_info_user" />
</navigation>